java 9 - part 2