@@ -1,10 +1,10 @@
 package cz.fb.manaus.core.category.categorizer;
 
-import com.google.common.collect.ImmutableMap;
 import cz.fb.manaus.core.category.BetCoverage;
 import cz.fb.manaus.core.model.SettledBet;
 import org.springframework.stereotype.Component;
 
+import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
 
@@ -13,7 +13,7 @@ import static java.util.stream.Collectors.toSet;
 @Component
 public class SelectionRegexpCategorizer extends AbstractRegexpResolver implements SettledBetCategorizer {
 
-    public static final ImmutableMap<String, Pattern> SELECTION_MAP = ImmutableMap.of(
+    public static final Map<String, Pattern> SELECTION_MAP = Map.of(
             "draw", compile("^The\\s+Draw$"),
             "yes", compile("^Yes$"),
             "no", compile("^No$"));
