@@ -1,6 +1,5 @@
 package cz.fb.manaus.core.dao;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Ordering;
 import cz.fb.manaus.core.model.BetAction;
 import cz.fb.manaus.core.model.BetActionType;
@@ -262,8 +261,8 @@ public class BetActionDaoTest extends AbstractDaoTest {
     @Test
     public void testBetActionWithRunnerPrices() {
         Market market = newMarket();
-        RunnerPrices runnerPrices = new RunnerPrices(232, ImmutableList.of(new Price(2.3d, 22, Side.BACK)), 5d, 2.5d);
-        MarketPrices marketPrices = new MarketPrices(1, market, Arrays.asList(runnerPrices));
+        RunnerPrices runnerPrices = new RunnerPrices(232, List.of(new Price(2.3d, 22, Side.BACK)), 5d, 2.5d);
+        MarketPrices marketPrices = new MarketPrices(1, market, List.of(runnerPrices));
         marketPrices.setTime(DateUtils.addMonths(new Date(), -1));
         marketDao.saveOrUpdate(market);
         marketPricesDao.saveOrUpdate(marketPrices);
@@ -278,7 +277,7 @@ public class BetActionDaoTest extends AbstractDaoTest {
     @Test
     public void testSharedPrices() {
         Market market = newMarket();
-        RunnerPrices runnerPrices = new RunnerPrices(232, ImmutableList.of(new Price(2.3d, 22, Side.BACK)), 5d, 2.5d);
+        RunnerPrices runnerPrices = new RunnerPrices(232, List.of(new Price(2.3d, 22, Side.BACK)), 5d, 2.5d);
         MarketPrices marketPrices = new MarketPrices(1, market, Arrays.asList(runnerPrices));
         marketPrices.setTime(DateUtils.addMonths(new Date(), -1));
         marketDao.saveOrUpdate(market);
