@@ -1,7 +1,6 @@
 package cz.fb.manaus.reactor.categorizer;
 
 
-import com.google.common.collect.ImmutableMap;
 import cz.fb.manaus.core.category.BetCoverage;
 import cz.fb.manaus.core.category.categorizer.SettledBetCategorizer;
 import cz.fb.manaus.core.model.Price;
@@ -11,6 +10,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.OptionalDouble;
 import java.util.Set;
 
@@ -38,7 +38,7 @@ public class CounterBetCategorizer implements SettledBetCategorizer {
         if (avgCounter.isPresent()) {
             double counterPrice = avgCounter.getAsDouble();
             double price = settledBet.getPrice().getPrice();
-            ImmutableMap<Side, Double> prices = ImmutableMap.of(side, price, counterSide, counterPrice);
+            Map<Side, Double> prices = Map.of(side, price, counterSide, counterPrice);
             if (Price.priceEq(counterPrice, price)) {
                 return Collections.singleton(PREFIX + "zero");
             } else if (prices.get(Side.BACK) > prices.get(Side.LAY)) {
