@@ -2,13 +2,13 @@ package cz.fb.manaus.rest;
 
 import com.google.common.base.CharMatcher;
 import com.google.common.base.Splitter;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Range;
 import org.springframework.stereotype.Component;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.Map;
 
 @Component
 public class IntervalParser {
@@ -16,7 +16,7 @@ public class IntervalParser {
     public static final String INTERVAL = "{interval:\\d+[hmd](?:-\\d+)?}";
 
 
-    public static ImmutableMap<Character, ChronoUnit> UNITS = ImmutableMap.of(
+    public static Map<Character, ChronoUnit> UNITS = Map.of(
             'h', ChronoUnit.HOURS,
             'm', ChronoUnit.MINUTES,
             'd', ChronoUnit.DAYS);
